# trackalab

./: .bazeliskrc  .bazelrc  .clang-tidy  .gitignore  BUILD  LICENSE  README.md  WORKSPACE
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/workflows/: blank.yml  changelog.yml  ci.yml  format.yml
artic_r3/: BUILD  artic_r3_test.cc  standard_mode_test.cc
artic_r3/public/artic_r3/: artic_r3.h
artic_r3/public/internal/: standard_mode.h
config/: BUILD  selects.bzl
spi/: BUILD
spi/public/spi/: spi.h
tr_artic_r3/: BUILD  artic_r3_test.cc  burst_mode.cc  burst_mode_test.cc  command_mode_test.cc  standard_mode_test.cc  transaction_test.cc
tr_artic_r3/public/artic_r3/: artic_r3.h
tr_artic_r3/public/internal/: burst_mode.h  command_mode.h  mock_io.h  standard_mode.h  transaction.h
tr_gpio/: BUILD
tr_gpio/public/tr_gpio/: gpio.h
tr_ms5837/: BUILD.bazel  conversion_test.cc  crc4.cc  crc4_test.cc  ms5837.cc  ms5837_test.cc  prom.cc  prom_test.cc
tr_ms5837/public/internal/: conversion.h  crc4.h  prom.h
tr_ms5837/public/tr_ms5837/: ms5837.h
tr_spi/: BUILD
tr_spi/public/tr_spi/: spi.h
tr_utils/: BUILD
tr_utils/public/tr_utils/: type_attributes.h
